# Daytripper4

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: Plugin.h.in
data/Data/F4SE/Plugins/: Daytripper4.ccc  Daytripper4.toml
src/: CMakeLists.txt  DefaultObjectHook.cpp  DefaultObjectHook.h  DefaultObjectLib.cpp  DefaultObjectLib.h  DialogLib.cpp  DialogLib.h  PCH.h  PatchLib.cpp  PatchLib.h  Settings.h  main.cpp
src/Fixes/: BookMenuText.cpp  BookMenuText.h  DlcPreCulling.cpp  DlcPreCulling.h  Fixes.cpp  Fixes.h  GrenadeProjectile.cpp  GrenadeProjectile.h  NiExtraDataTyping.cpp  NiExtraDataTyping.h  ProjectileDownwardAiming.cpp  ProjectileDownwardAiming.h  RobotModMenu.cpp  RobotModMenu.h  WetnessMaterialSsr.cpp  WetnessMaterialSsr.h
src/Patches/: CreationClubLib.cpp  CreationClubLib.h  CreationClubSupport.cpp  CreationClubSupport.h  EslExtensionSupport.cpp  EslExtensionSupport.h  ExtendedArchiveLimit.h  ExtendedFormRange.cpp  ExtendedFormRange.h  FreeBuildSupport.cpp  FreeBuildSupport.h  Patches.cpp  Patches.h  PipBoyModSupport.cpp  PipBoyModSupport.h  PluginVersionPatcher.cpp  PluginVersionPatcher.h  RejectInvalidMaterial.cpp  RejectInvalidMaterial.h  SmallFileLoader.h
src/Patches/ExtendedArchiveLimit/: Archive2IndexEntryHook.cpp  Archive2IndexEntryHook.h  Archive2IndexHook.cpp  Archive2IndexHook.h  ExtendedArchiveDef.cpp  ExtendedArchiveDef.h  TextureIndexEntryHook.cpp  TextureIndexEntryHook.h  TextureIndexHook.cpp  TextureIndexHook.h  TextureRequestHook.cpp  TextureRequestHook.h
src/Patches/SmallFileLoader/: AdjustFormIDFileIndexHook.cpp  AdjustFormIDFileIndexHook.h  DataHandlerDef.cpp  DataHandlerDef.h  DataHandlerHook.cpp  DataHandlerHook.h  GetFileAtHook.cpp  GetFileAtHook.h  GetSmallFileHook.cpp  GetSmallFileHook.h  LoadTESInfoHook.cpp  LoadTESInfoHook.h  SaveLoadGameDef.cpp  SaveLoadGameDef.h  SaveLoadGameHook.cpp  SaveLoadGameHook.h  SetCompileIndexHook.cpp  SetCompileIndexHook.h  SmallFileLib.cpp  SmallFileLib.h
src/Warnings/: ReferenceHandleCap.cpp  ReferenceHandleCap.h  Warnings.cpp  Warnings.h
